# torchless-rs

./: .gitignore  Cargo.toml  DEVELOPMENT.md  FUTURE.md  IMPLEMENTATION.md  LIBRARY.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release-build.yml
benches/: attention_bench.rs  e2e_bench.rs  matmul_bench.rs
docs/: README.md  development.md  getting-started.md  implementation.md  library.md  models.md  params-future.md  params.md
docs/architecture/: backend-system.md  model-architectures.md  tensor-storage.md
docs/formats/: model-formats.md
docs/gpu/: cuda.md  memory-management.md  metal.md  opencl.md  overview.md  rocm.md  webgpu.md
docs/optimization/: algorithms.md  build.md  memory.md  parallelization.md  quantization.md  simd.md
future/: phase1.md  phase2.md  phase3.1.md  phase3.2.md  phase4.md  phase5.1.md  phase5.2.md  phase5.3.md  phase5.4.md  phase5.5.md  phase6.md  phase7.md  phase8.md
models/: get.sh
scripts/: build.sh  build_macos_x86_quick.sh  build_pgo.sh  build_releases.sh  pgo-build.sh  sanity.sh  santity.sh  tag-release.sh
scripts/hooks/: cross_os.sh  cross_os_macos_to_linux.sh  cross_os_macos_to_windows.sh
src/: chat.rs  coding.rs  lib.rs  main.rs  server.rs
src/kernels/: avx512.rs  backend.rs  dispatch.rs  fused.rs  gpu_memory.rs  mod.rs  neon.rs  optimized.rs  parallel.rs  tests.rs
src/kernels/cuda/: kernels.rs  memory.rs  mod.rs  tensor.rs
src/kernels/metal/: memory.rs  mod.rs  shaders.rs  tensor.rs
src/kernels/opencl/: kernels.rs  memory.rs  mod.rs  tensor.rs
src/kernels/rocm/: kernels.rs  memory.rs  mod.rs  tensor.rs
src/kernels/webgpu/: memory.rs  mod.rs  shaders.rs  tensor.rs
src/loader/: mod.rs  parameters.rs  quantization.rs  tests.rs  weight_matrix.rs
src/loader/formats/: gguf.rs  mod.rs  safetensors.rs
src/memory/: mod.rs
src/model/: architecture.rs  batching.rs  kv_cache.rs  mod.rs  parallel.rs  speculative.rs
src/model/models/: deepseek.rs  gemma.rs  gpt_oss.rs  llama.rs  mod.rs  phi.rs  qwen.rs
src/model/modules/: attention.rs  embedding.rs  flash_attention.rs  layer.rs  lazy_attention.rs  lazy_embedding.rs  lazy_layer.rs  lazy_mlp.rs  lazy_moe.rs  lazy_moe_layer.rs  mlp.rs  mod.rs  moe.rs  moe_layer.rs  rmsnorm.rs  tests.rs
src/sampler/: mod.rs  tests.rs
src/tensor/: mod.rs  storage.rs
src/tokenizer/: mod.rs  tests.rs
tests/: generate_test_model.py  integration_test.rs  memory_test.rs
