[package]
name = "torchless"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
memmap2 = "0.9"
byteorder = "1.5"
rand = "0.8"

# Half-precision floating point support
half = "2.4"

# Arena allocator for efficient inference memory management
bumpalo = "3.14"

# BLAS support (optional)
blas-src = { version = "0.10", optional = true }
openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }

# SIMD support (optional)
wide = { version = "0.7", optional = true }

# Parallel processing (optional)
rayon = { version = "1.10", optional = true }

# GPU backends (optional)
# Note: cudarc requires specifying a CUDA version feature
# Use cuda-12050 as it's the most recent stable version
# Users can override this with CUDA_VERSION env var or by modifying features
cudarc = { version = "0.11", optional = true, default-features = false, features = ["cuda-12050", "cublas", "driver", "nvrtc"] }
metal = { version = "0.29", optional = true }
ocl = { version = "0.19", optional = true }

[features]
default = []
# OpenBLAS backend - best general Linux performance
openblas = ["ndarray/blas", "blas-src", "blas-src/openblas", "openblas-src"]
# BLIS backend - good for AMD CPUs
blis = ["ndarray/blas", "blas-src", "blas-src/blis"]
# Accelerate backend - native macOS framework
accelerate = ["ndarray/blas", "blas-src", "blas-src/accelerate"]
# SIMD-optimized kernels using portable SIMD
simd = ["wide"]
# Parallel processing with Rayon
parallel = ["rayon", "ndarray/rayon"]
# GPU backends
cuda = ["cudarc"]
rocm = []  # ROCm backend for AMD GPUs (requires ROCm runtime and rocBLAS installed)
metal-gpu = ["metal"]
opencl = ["ocl"]

[lib]
name = "torchless"
path = "src/lib.rs"

[[bin]]
name = "torchless"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matmul_bench"
harness = false

[[bench]]
name = "attention_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false

# =============================================================================
# Release Profile Optimizations
# =============================================================================

[profile.release]
# Link-Time Optimization (LTO) - enables cross-crate inlining
# "fat" LTO provides maximum optimization at the cost of longer compile times
lto = "fat"
# Use single codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Abort on panic for smaller binary and slightly faster code
panic = "abort"
# Maximum optimization level
opt-level = 3

# Profile for profiling (optimized but with debug info for profilers)
[profile.profiling]
inherits = "release"
debug = true

# Profile for PGO instrumentation builds
[profile.release-instrumented]
inherits = "release"
lto = false
codegen-units = 16
